played a little bit with style

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
+	<title>Cookie Stand</title>
+
 </head>
+
 <body>
+	Cookie Stand
 <p> Pike Market Place</p>
 <ul id = 'PikeMarketPlace'></ul>
 
