Accidently tried out constructor on monday

--- a/index.html
+++ b/index.html
@@ -7,21 +7,27 @@
 </head>
 
 <body>
-	Cookie Stand
-<p> Pike Market Place</p>
-<ul id = 'PikeMarketPlace'></ul>
+<img src="img/salmon.png" alt="salmon" align="middle" >	
 
+<h1>Pad's Cookie Stand</h1>
+
+<p> Pike Market Place</p>
+<ul id = 'PikeMarketPlace'></ ul>
+   
 <p> SeaTac Airpot</p>
 <ul id = 'SeaTacAirport'></ul>
 
-<p> SouthCenterMall</p>
+
+<p> South Center Mall</p>
 <ul id = 'SouthCenterMall'></ul>
 
-<p> BellevueSquare</p>
+
+<p> Bellevue Square</p>
 <ul id = 'BellevueSquare'></ul>
 
 <p> Alki</p>
 <ul id = 'Alki'></ul>
+
 
 
 <script src = "app.js"></script>
