--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Amaranth:700italic' rel='stylesheet' type='text/css'>
 	<title>Cookie Stand</title>
 
 </head>
 
 <body>
-<img src="img/salmon.png" alt="salmon" align="middle" >	
+
+<img src="img/salmon.png" alt="salmom">	
 
 <h1>Pad's Cookie Stand</h1>
 
 <p> Pike Market Place</p>
-<ul id = 'PikeMarketPlace'></ ul>
+<ul id = 'PikeMarketPlace'></ul>
    
 <p> SeaTac Airpot</p>
 <ul id = 'SeaTacAirport'></ul>
