index.html and style.css edited

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	Cookie Stand
+<img src="img/salmon.png" alt="salmom">
+<h1>Pad's Cookie Stand</h1>
+
 <p> Pike Market Place</p>
 <ul id = 'PikeMarketPlace'></ul>
 
