no actual changes made

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <img src="img/salmon.png" alt="salmom">
 <h1>Pad's Cookie Stand</h1>
 
-<p> Pike Market Place</p>
+<h4> Pike Market Place</h4>
 <ul id = 'PikeMarketPlace'></ul>
 
-<p> SeaTac Airpot</p>
+<h4> SeaTac Airpot</h4>
 <ul id = 'SeaTacAirport'></ul>
 
-<p> SouthCenterMall</p>
+<h4> SouthCenterMall</h4>
 <ul id = 'SouthCenterMall'></ul>
 
-<p> BellevueSquare</p>
+<h4> BellevueSquare</h4>
 <ul id = 'BellevueSquare'></ul>
 
-<p> Alki</p>
+<h4> Alki</h4>
 <ul id = 'Alki'></ul>
 
 
