--- a/sales.html
+++ b/sales.html
@@ -1,33 +1,51 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href='https://fonts.googleapis.com/css?family=Amaranth:700italic' rel='stylesheet' type='text/css'>
-	<title>Cookie Stand</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Amaranth:700italic' rel='stylesheet' type='text/css'>
+  <title>Cookie Stand</title>
 
 </head>
 
 <body>
 
-<img src="img/salmon.png" alt="salmom">	
+<img src="img/salmon.png" alt="salmon" />
 
 <h1>Pad's Cookie Stand</h1>
 
-<h4> Pike Market Place</h4>
-<ul id = 'PikeMarketPlace'></ul>
+<table>
 
-<h4> SeaTac Airpot</h4>
-<ul id = 'SeaTacAirport'></ul>
+<tr>
+<th></th>
+<th>10am</th>
+<th>11am</th>
+<th>12pm</th>
+<th>1pm</th>
+<th>2pm</th>
+<th>3pm</th>
+<th>4pm</th>
+<th>5pm</th>
+</tr>
 
-<h4> SouthCenterMall</h4>
-<ul id = 'SouthCenterMall'></ul>
+<tr id = 'PikeMarketPlace'>
+<th scope="row"> Pike Market Place</th>
+</tr>
+<tr id = 'SeaTacAirport'>
+<th scope="row"> SeaTac Airport</th>
+</tr>
+<tr id = 'SouthCenterMall'>
+<th scope="row"> South Center Mall</th>
+</tr>
+<tr id = 'BellevueSquare'>
+<th scope="row"> Bellevue Square</th>
+</tr>
+<tr id = 'Alki'>
+<th scope="row"> Alki</th>
+</tr>
 
-<h4> BellevueSquare</h4>
-<ul id = 'BellevueSquare'></ul>
-
-<h4> Alki</h4>
-<ul id = 'Alki'></ul>
 
 
+
+</table>
 
 <script src = "app.js"></script>
 
