--- a/sales.html
+++ b/sales.html
@@ -45,18 +45,18 @@
 </table>
 
 <form id="newStore">
-
-<h2>Add New Store:</h2>
+<fieldset>
+<legend>Add New Store:</legend>
     <label for="location">New Location</label><br />
-    <input type="text" name="New Location"> <br />
-    <label for="minCustomer">Min Customer Per Hour</label><br />
+    <input type="text" name="location"> <br />
+    <label for="minCustomer">Min Customer/Hour</label><br />
     <input type="text" name="minCustomer"> <br />
-    <label for="maxCustomer">Max Customer Per Hour<label><br />
+    <label for="maxCustomer">Max Customer/Hour<label><br />
     <input type="text" name="maxCustomer"><br />
-    <label for="avgCookieust">Average Cookie Per Customer</label><br />
+    <label for="avgCookieust">Avg Cookie/Cust</label><br />
     <input type="text" name="avgCookieCust"><br />
     <button type="click">Submit</button>
-
+</fieldset>
 </form>
 
 <script src = "app.js"></script>
