--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 	<title>Cookie Satnd</title>
 </head>
@@ -10,32 +11,38 @@
 
 <body>
 
-<img id="img1" src="img/salmon.png" alt="salmon">
+<img class="align-center" src="img/salmon.png" alt="salmon">
 
-<h1>Pat's salmon cookie stand</h1>
-<p>Salmon cookies made with fish, salmon cookies are delish!</p>
+<h1 class='title'>Pat's salmon cookie stand</h1>
+<h2 class='title'>Salmon cookies made with fish, salmon cookies are delish!</h2>
 
-<h3>Locations & Operation Time</h3>
-<ul>
+<div class="c1">
+  <h2>Locations & Hours</h2>
+  <ul>
   <li> Pike Market Plcae : 10am - 6pm</li>
   <li> SeaTac Airport    : 10am - 6pm</li>
   <li> South Center Mall : 10am - 6pm</li>
   <li> Bellevue Square   : 10am - 6pm</li>
   <li> Alki              : 10am - 6pm</li>
-</ul>
+  </ul>
+</div>
 
-<h3>Company's History</h3>
-<p><img id="img2" src="img/fancyfish.png" alt="fancyfish" width="200px" />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="c1">
+  <h2>Company's History</h2>
+  <p class='p1'><img class="img0" src="img/fancyfish.png" alt="fancyfish" width="200px" />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
 
-<img id="img3" src="img/happyfamilyeatingcookies.jpg" alt="happyfamilteatingcookies" width='200px' />
+  <img class="align-center" src="img/happyfamilyeatingcookies.jpg" alt="happyfamilteatingcookies" width='200px' />
 
-<h3>Promotions Gooooing On</h3>
-<img id "img4" src="img/salmon tshirt.png" alt="salmon tshirt" width="200px" />
-<p><figcaption>We sell shirts too! </figcaption>
-</p>
+<div class='c1'>
+<h2>Promotions Gooooing On</h3>
+<img class="img0" src="img/salmon tshirt.png" alt="salmon tshirt" width="200px" />
+<figcaption class='p1'>We sell 'delicious' Tshirts too! </figcaption>
+</div>
 
-
-<li><a href="www.salmondays.org">Issaquah Salmon Days</a></li>
+<div class='c5'>
+<li class ='p2'><a href="www.salmondays.org">Issaquah Salmon Days</a></li>
+</div>
 
 </body>
 </html>
