--- a/style-guide.html
+++ b/style-guide.html
@@ -1,30 +1,28 @@
 <html>
-<head>
-	<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-	<title> Style Guide</title>
-	<style>
-	body{
-		font-family:
-		padding: ;
-		}
+	<head>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
+		<img class="align-center" src="img/salmon.png" alt="salmon">
+		<h1 class="title">Pat's Cookies Stand: Style Guide</h1>
+		<h1 class="align-center">Typography</h1>
+		<h1 >Header 1</h1>
+		<h2>Header 2</h2>
+		<h3>Header 3</h3>
+		<h4>Header 4</h4>
+		<a href="">Link</a>
+		<p>Paragraph text</p>
+		<h1 class="bg">Background Color</h1>
 
-	p {color: gray;}
-	code {color: black;}
-	</style>
-</head>
-<body>
-
-	<h1>Style Guide</h1>
-	<p>This is an example of how you can create a style guide.</p>
-
-	<h2>Headline2</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<h3>Headline3</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<h4>Headline4</h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-	color Palette
-
-</body>
+		<h2 class="section">Color Pallete</h2>
+		<div class="colorPallete">
+			<div class="c1">#CC7A29</div>
+			<div class="c2">#522900</div>
+			<div class="c3">#560000</div>
+			<div class="c4">#888</div>
+			<div class="c5">#000</div>
+			<div class="bg">#ffffcc</div>
+		</div>
+	</body>
 </html>
