add script tag to index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
 <div class='c5'>
 <li class ='p2'><a href="www.salmondays.org">Issaquah Salmon Days</a></li>
 </div>
-
+<script src="app.js"></script>
 </body>
 </html>
